@@ -15,6 +15,9 @@ We have added a branch to our SVN for the new cards that are currently being scr
 Add column to Load Gauntlet screen to display your deck for the gauntlet
 Fix so your deck is saved with a gauntlet when starting a quick gauntlet
 Instead of crashing, prompt user to select a deck if attempting to load a gauntlet that doesn't have one saved
+Make it so Last Activity column isn't cut off
+Make it so double-clicking a gauntlet on the Load Gauntlet screen will launch it
+Support renaming gauntlets
 
 ---------
 New Cards
